add cost matrix mtl

--- a/confusion_matrices_and_classifier_evaluation.ipynb
+++ b/confusion_matrices_and_classifier_evaluation.ipynb
@@ -433,6 +433,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Which Metric Should I Care About?\n",
+    "\n",
+    "Well, it depends.\n",
+    "\n",
+    "### General Lessons\n",
+    "\n",
+    "First, let's make some general observations about the metrics we've so far defined.\n",
+    "\n",
+    "Accuracy:\n",
+    "- Pro: Takes into account both false positives and false negatives.\n",
+    "- Con: Can be misleadingly high when there is a significant class imbalance. (A lottery-ticket predictor that *always* predicts a loser will be highly accurate.)\n",
+    "\n",
+    "Recall:\n",
+    "- Pro: Highly sensitive to false negatives.\n",
+    "- Con: No sensitivity to false positives.\n",
+    "\n",
+    "Precision:\n",
+    "- Pro: Highly sensitive to false positives.\n",
+    "- Con: No sensitivity to false negatives.\n",
+    "\n",
+    "F-1 Score:\n",
+    "- Harmonic mean of recall and precision.\n",
+    "\n",
+    "### Cost\n",
+    "\n",
+    "The nature of your business problem will help you determine which metric matters.\n",
+    "\n",
+    "Sometimes false positives are much worse than false negatives: Arguably, a model that compares a sample of crime-scene DNA with the DNA in a city's database of its citizens presents one such case. Here a false positive would mean falsely identifying someone as having been present at a crime scene, whereas a false negative would mean only that we fail to identify someone who really was present at the crime scene as such.\n",
+    "\n",
+    "On the other hand, consider a model that inputs X-ray images and predicts the presence of cancer. Here false negatives are surely worse than false positives: A false positive means only that someone without cancer is misdiagnosed as having it, while a false negative means that someone with cancer is misdiagnosed as *not* having it.\n",
+    "\n",
+    "### Strategies\n",
+    "\n",
+    "There are a couple of strategies for trying to quantify these important differences in value between false positives and false negatives.\n",
+    "\n",
+    "#### Strategy 1: Use a cost matrix.\n",
+    "\n",
+    "One might assign different weights to the costs associated with false positives and false negatives. (We'll standardly assume that the costs associated with *true* positives and negatives are negligible.)\n",
+    "\n",
+    "**Example**. Suppose we are in the DNA prediction scenario above. Then we might construct the following cost matrix:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cost = np.array([[0, 10], [3, 0]])\n",
+    "cost"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This cost matrix will allow us to compare models if we have access to those models' rates of false positives and false negatives, i.e. if we have access to the models' confusion matrices!\n",
+    "\n",
+    "**Problem**. Given the cost matrix above and the confusion matrices below, which model should we go with?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "conf1, conf2 = np.array([[100, 10], [30, 300]]), np.array([[120, 20], [0, 300]])\n",
+    "\n",
+    "print(conf1, 2*'\\n', conf2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Strategy: Multiply relevant costs by numbers of false classifications\n",
+    "\n",
+    "def cost_calc(cost, cm):\n",
+    "    return cost[0, 1] * cm[0, 1] + cost[1, 0] * cm[1, 0]\n",
+    "\n",
+    "# For Model 1:\n",
+    "cost1 = cost_calc(cost=cost, cm=conf1)\n",
+    "\n",
+    "# For Model 2:\n",
+    "cost2 = cost_calc(cost=cost, cm=conf2)\n",
+    "\n",
+    "print(cost1, cost2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Strategy 2: Adjust the thresholds for false positives and false negatives.\n",
+    "\n",
+    "Let's turn to this now!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
