standardize soln plots

--- a/auc_roc.ipynb
+++ b/auc_roc.ipynb
@@ -301,11 +301,11 @@
     "      f\"\"\"\\tYou\\'ll have a True Positive Rate of {round(tprs[max_dist], 3)} \\n\"\"\"\n",
     "      f\"\"\"\\tand a False Positive Rate of {round(fprs[max_dist], 3)}\"\"\")\n",
     "\n",
-    "plt.figure(figsize = (8, 6))\n",
-    "plt.plot(fprs[:max_dist], tprs[:max_dist], 'r.')\n",
-    "plt.plot(fprs[max_dist], tprs[max_dist], 'ko', ms=10)\n",
-    "plt.plot(fprs[max_dist + 1:], tprs[max_dist + 1:], 'r.')\n",
-    "plt.plot(fprs, fprs, '.');"
+    "fig, ax = plt.subplots(figsize=(8, 6))\n",
+    "ax.plot(fprs[:max_dist], tprs[:max_dist], 'r.')\n",
+    "ax.plot(fprs[max_dist], tprs[max_dist], 'ko', ms=10)\n",
+    "ax.plot(fprs[max_dist + 1:], tprs[max_dist + 1:], 'r.')\n",
+    "ax.plot(fprs, fprs, '.');"
    ]
   },
   {
@@ -348,7 +348,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(fpr, tpr);"
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(fpr, tpr);"
    ]
   },
   {
